--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   "scripts": {
     "audit": "improved-yarn-audit --ignore-dev-deps --min-severity moderate -e 1488",
     "build": "scripts/build.sh",
+    "buildSCSS": "scripts/buildSCSS.sh",
     "bundlewatch": "bundlewatch --config .bundlewatch.config.json",
     "docs-build": "cross-env NODE_ENV=docs nuxt build -c docs/nuxt.config.js",
     "docs-dev": "cross-env NODE_ENV=docs nuxt dev -c docs/nuxt.config.js",
@@ -81,8 +82,8 @@
   },
   "dependencies": {
     "@nuxt/opencollective": "^0.3.2",
-    "bootstrap": "^4.6.1",
-    "popper.js": "^1.16.1",
+    "bootstrap": "^5.1.3",
+    "popper.js": "npm:@popperjs/core@^2.0.0",
     "portal-vue": "^2.1.7",
     "vue-functional-data-merge": "^3.1.0"
   },
