--- a/package.json
+++ b/package.json
@@ -80,8 +80,8 @@
   },
   "dependencies": {
     "@nuxt/opencollective": "^0.3.2",
+    "@popperjs/core": "2.11.7",
     "bootstrap": "^5.1.3",
-    "@popperjs/core": "^2.0.0",
     "portal-vue": "^2.1.7",
     "vue-functional-data-merge": "^3.1.0"
   },
